# usi-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  aliases.js  appveyor.yml  index.html  search-index.js  settings.html  source-files.js
itertools/: enum.Either.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.Position.html
itertools/structs/: struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.Coalesce.html  struct.Combinations.html  struct.ConsTuples.html  struct.Dedup.html  struct.Group.html  struct.GroupBy.html  struct.Groups.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.IntoChunks.html  struct.Iterate.html  struct.KMerge.html  struct.KMergeBy.html  struct.MapInto.html  struct.MapResults.html  struct.Merge.html  struct.MergeBy.html  struct.MergeJoinBy.html  struct.MultiPeek.html  struct.MultiProduct.html  struct.PadUsing.html  struct.PeekingTakeWhile.html  struct.Positions.html  struct.ProcessResults.html  struct.Product.html  struct.PutBack.html  struct.PutBackN.html  struct.RcIter.html  struct.RepeatCall.html  struct.RepeatN.html  struct.Step.html  struct.TakeWhileRef.html  struct.Tee.html  struct.TupleBuffer.html  struct.TupleCombinations.html  struct.TupleWindows.html  (+10 more)
src/: error.rs  gui.rs  lib.rs
src/engine/: command.rs  parser.rs
src/process/: engine.rs  mod.rs  (+2 more)
usi/: all.html  enum.BestMoveParams.html  enum.CheckmateParams.html  enum.EngineCommand.html  enum.Error.html  enum.GameOverKind.html  enum.GuiCommand.html  enum.IdParams.html  enum.InfoParams.html  enum.OptionKind.html  enum.ScoreKind.html  index.html  sidebar-items.js  struct.OptionParams.html  struct.ThinkParams.html
(+39 files in other folders)
